--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
-h1 {
-    color: red;
+.col-sm-6 {
+    border: 1px solid red;
+}
+
+.col-sm-3 {
+    border: 1px solid blue;
+}
+
+.col-sm-12 {
+    border: 1px solid green;
 }
