--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,57 @@
-.col-sm-6 {
-    border: 1px solid red;
+#main-row {
+    /* background-image: url("background2.jpg"); */
+    background-repeat: no-repeat;
+    height: 500px;
 }
 
-.col-sm-3 {
-    border: 1px solid blue;
-}
-
-.col-sm-12 {
+#main-left {
+    background-image: url("bga2.jpg");
+    /* background-repeat: no-repeat; */
+    height: 500px;
     border: 1px solid green;
 }
 
+#main-center {
+    background-image: url("bgb2.jpg");
+    background-repeat: no-repeat;
+    height: 500px;
+    text-align: center;
+    border: 1px solid red;
+}
+
+#basic-info {
+    margin-top: 225px;
+}
+
+#main-right {
+    background-image: url("bgc.jpg");
+    /* background-repeat: no-repeat; */
+    height: 500px;
+    border: 1px solid blue;
+}
+
+#button-row {
+    margin: 20px 0px 20px 0px;
+}
+
 button {
-    color: blue;
+    color: #3c6382;
     font-weight: bold;
     width: 155px;
     background-color: white;
-    border: 1px solid blue;
-    border-radius: 5px;
+    border: 2px solid #3c6382;
+    border-radius: 7px;
+    /* center button in column */
+    display: block;
+    margin: auto;
 }
 
 button:hover {
-    background-color: blue;
+    background-color: #3c6382;
     color: white;
+}
+
+#resume-div {
+    border: 1px solid grey;
+    box-shadow: 0px 5px 5px 0px 
 }
