--- a/assets/style.css
+++ b/assets/style.css
@@ -66,6 +66,12 @@ button:hover {
     padding: 20px;
 }
 
+#elmo-picture {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 #resume-div {
     border: 1px solid grey;
     box-shadow: 0px 5px 10px 0px;
