--- a/assets/style.css
+++ b/assets/style.css
@@ -17,12 +17,12 @@ body, html{
 }
 
 #main-left {
-    background-image: url("bga4.png");
+    background-image: url("main-left.png");
     background-repeat:no-repeat;
 }
 
 #main-center {
-    background-image: url("bgb3.png");
+    background-image: url("main-center.png");
     background-repeat:no-repeat;
 }
 
@@ -33,7 +33,7 @@ body, html{
 }
 
 #main-right {
-    background-image: url("bgc4.png");
+    background-image: url("main-right.png");
     background-repeat:no-repeat;
 }
 
@@ -96,12 +96,25 @@ button:hover {
     margin-bottom: 10px;
 }
 
-#portfolio-div {
+h3 {
+    color: #60a3bc;
+}
+#portfolio-aside1 {
     border: 1px solid grey;
     box-shadow: 0px 5px 10px 0px;
     background-color: white;
     border-radius: 7px;
     padding: 20px;
+    text-align: center;
+}
+
+#portfolio-aside2 {
+    border: 1px solid grey;
+    box-shadow: 0px 5px 10px 0px;
+    background-color: white;
+    border-radius: 7px;
+    padding: 20px;
+    text-align: center;
 }
 
 #links-div {
@@ -118,4 +131,14 @@ button:hover {
     /* force copyright to middle of footer */
     margin-right: auto !important;
     margin-left: auto !important;
+}
+
+a {
+    color: #3c6382;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #38ada9;
+    text-decoration: none;
 }
