--- a/assets/style.css
+++ b/assets/style.css
@@ -102,13 +102,14 @@ h3 {
     color: #60a3bc;
 }
 #portfolio-aside1 {
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
     box-shadow: 0px 5px 10px 0px;
     background-color: white;
     border-radius: 7px;
     padding: 20px;
     text-align: center;
     margin-bottom: 100px;
+    border: 1px solid red;
 }
 
 #portfolio-aside2 {
