--- a/assets/style.css
+++ b/assets/style.css
@@ -101,18 +101,7 @@ button:hover {
 h3 {
     color: #60a3bc;
 }
-#portfolio-aside1 {
-    /* border: 1px solid grey; */
-    box-shadow: 0px 5px 10px 0px;
-    background-color: white;
-    border-radius: 7px;
-    padding: 20px;
-    text-align: center;
-    margin-bottom: 100px;
-    border: 1px solid red;
-}
-
-#portfolio-aside2 {
+.col-sm-10.project-row {
     border: 1px solid grey;
     box-shadow: 0px 5px 10px 0px;
     background-color: white;
@@ -120,6 +109,7 @@ h3 {
     padding: 20px;
     text-align: center;
     margin-bottom: 100px;
+    height: 250px;
 }
 
 #links-div {
