--- a/assets/style.css
+++ b/assets/style.css
@@ -96,11 +96,18 @@ button:hover {
 
 .link {
     margin-bottom: 10px;
+    text-align: left;
 }
 
 h3 {
     color: #60a3bc;
 }
+
+h6 {
+    margin-top: 25px;
+    text-align: left;
+}
+
 .col-sm-10.project-row {
     border: 1px solid grey;
     box-shadow: 0px 5px 10px 0px;
@@ -110,6 +117,10 @@ h3 {
     text-align: center;
     margin-bottom: 100px;
     height: 250px;
+}
+
+.col-sm-5.right{
+    margin-left: 100px;
 }
 
 #links-div {
